# FragmentFinder

./: .gitignore  CMakeLists.txt  README.md  findRectObjects.pro  findRectObjects.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  worker-thread.cpp  worker-thread.h
translations/: findRectObjects_ru_RU.ts  findRectObjects_ru_Ru.ts
